--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body class="bg-gray-50 text-gray-800 transition-colors duration-300">
     <!-- Header -->
-    <header class="bg-indigo-600 text-white shadow-lg">
+    <header class="bg-blue-600 text-white shadow-lg">
         <div class="container mx-auto px-4 py-6 flex justify-between items-center">
             <div>
                 <h1 class="text-3xl font-bold"><i class="fas fa-comments mr-3"></i>Intelligent Chat Analyzer</h1>
-                <p class="text-indigo-100">Gain insights from your WhatsApp, Telegram, and Facebook chats</p>
+                <p class="text-blue-100">Gain insights from your WhatsApp, Telegram, and Facebook chats</p>
             </div>
         </div>
     </header>
@@ -29,14 +29,14 @@
             
             <p class="text-gray-800 mb-4">Export your chat as a .txt file from your messaging app and upload it here.</p>
             
-            <div class="border-2 border-dashed border-gray-300 rounded-lg p-8 text-center cursor-pointer hover:border-indigo-400 transition-colors" id="dropZone">
+            <div class="border-2 border-dashed border-gray-300 rounded-lg p-8 text-center cursor-pointer hover:border-blue-400 transition-colors" id="dropZone">
                 <input type="file" id="fileInput" accept=".txt" class="hidden" aria-label="aa">
                 <i class="fas fa-cloud-upload-alt text-4xl text-gray-400 mb-2"></i>
                 <p class="text-sm text-gray-600">
-                    <span class="font-medium text-indigo-600">Click to upload</span> or drag and drop
+                    <span class="font-medium text-blue-600">Click to upload</span> or drag and drop
                 </p>
                 <p class="text-xs text-gray-500">TXT files only (max 10MB)</p>
-                <div id="fileName" class="mt-2 text-sm text-indigo-600 font-medium hidden"></div>
+                <div id="fileName" class="mt-2 text-sm text-blue-600 font-medium hidden"></div>
             </div>
 
             <div class="mt-4 flex flex-col sm:flex-row sm:items-center gap-4">
@@ -68,7 +68,7 @@
                     </div>
                 </div>
 
-                <button id="analyzeBtn" class="mt-4 sm:mt-6 bg-indigo-600 text-white px-6 py-2 rounded-lg font-medium hover:bg-indigo-700 transition disabled:opacity-50 flex items-center justify-center" disabled>
+                <button id="analyzeBtn" class="mt-4 sm:mt-6 bg-blue-600 text-white px-6 py-2 rounded-lg font-medium hover:bg-blue-700 transition disabled:opacity-50 flex items-center justify-center" disabled>
                     <i class="fas fa-chart-line mr-2"></i> Analyze Chat
                 </button>
             </div>
@@ -228,7 +228,7 @@
                 <div class="flex justify-between items-center mb-4">
                     <h2 class="text-xl font-semibold"><i class="fas fa-star mr-2"></i>Chat Insights & Awards</h2>
                     <div class="awards-dropdown">
-                        <button class="text-gray-500 hover:text-indigo-600 p-1 rounded-full" title="How awards are calculated">
+                        <button class="text-gray-500 hover:text-blue-600 p-1 rounded-full" title="How awards are calculated">
                             <i class="fas fa-info-circle text-lg"></i>
                         </button>
                         <div class="awards-dropdown-content">
