--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body class="bg-gray-50 text-gray-800 transition-colors duration-300">
+<body class="bg-gray-50 text-gray-800 transition-colors duration-300 flex flex-col min-h-screen">
     <!-- Header -->
     <header class="bg-blue-600 text-white shadow-lg">
         <div class="container mx-auto px-4 py-6 flex justify-between items-center">
@@ -22,7 +22,7 @@
         </div>
     </header>
 
-    <main class="container mx-auto px-4 py-4">
+    <main class="container mx-auto px-4 py-4 flex-grow">
         <!-- Upload Section -->
         <section class="card bg-white rounded-lg shadow-md p-6 mb-0">
             <h2 class="text-xl font-semibold mb-4"><i class="fas fa-upload mr-2"></i>Upload Your Chat Export</h2>
